# LangChain-Learning

./: README.md  pyproject.toml
MathSense-reference/: approach_1.ipynb  final.html  final.ipynb  open-source.ipynb  via-mistral.ipynb
Projects/: blog_post_generator.py
basic_rag_chroma_db/: chroma.sqlite3
ch-1-basics/: gemini_call.py  groq_call.py
ch-10-retrievers/: wiki.py
ch-11-rags/: basic_rag.py  db_rag.py  memory_rag.py
ch-12-Agents/: tools.py
ch-13-langgraph/ch-1-basics/: basics.ipynb  messages.ipynb  orchestrator-worker-arch.ipynb  parallelization.ipynb  pydantic.ipynb  tools.ipynb
ch-14-sql-alchemy/: database.py  models.py
ch-2-prompts/: chatPromptTemplate.py  dynamic_prompt.py  static_prompt.py
ch-3-structured_output/: annotated_typedict.py  pydantic_example.py  typedict.py
ch-4-outputparsers/: json_output_parser.py  str_output_parser.py
ch-5-chains/: conditional_chain.py  multi_sequential_chain.py  parallel_chain.py
ch-6-document-loaders/: csv-loader.py  directory-loader.py  pdf-loader.py  text-loader.py  web-based-loader.py
ch-7-text-splitters/: character-text-splitter.py  python-text-splitter.py  recursive-text-splitter.py
ch-8-embeddings/: hf_embeddings.py
ch-9-vector-stores/: sample-chroma.py  sample-faiss.py
chroma_db/: chroma.sqlite3
loader_examples/: data.csv  temp.txt
